--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <div class="main">
         <p>This is E-commerce Website</p>
+        <p>This is trial of real-time push to GitHub</p>
     </div>
 </body>
 </html>
