--- a/index.html
+++ b/index.html
@@ -9,22 +9,37 @@
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg bg-white ">
+        <div class="container-fluid ">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <a class="navbar-brand" href="#">Hidden brand</a>
+            <a class="navbar-brand" href="#"><img src="logo.jpg" class="img-fluid logo" alt=""></a>
             <form class="d-flex search ml-9" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
+              <input class="form-control me-2" type="search" placeholder="Search for Products, Brands and more..." aria-label="Search">
+              <button class="btn btn-outline-success" type="submit"> Search</button>
             </form>
-            <button class="button m-20 bg-green" onclick="location.href='login.html'">Login</button>
-            <button class="button" onclick="location.href='signup.html'">Signup</button>
+            <button class="button login" onclick="location.href='login.html'">Login</button>
+            <button class="button sign" onclick="location.href='signup.html'">Sign Up</button>
           </div>
         </div>
       </nav>
+      <!-- Main Content  -->
+       <div class="container-fluid" style="max-height: 250px;">
+        <div class="row text-center bg-warning" >
+          <div class="col-6 align-itmes-center">
+            <h1 class="mt-80">Clothing Online Shop</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet consequatur, ipsa modi quam illum molestiae id architecto fugiat eos expedita!</p>
+          </div>
+          <div class="col-6">
+            <img src="" alt="">
+          </div>
+        </div>
+       </div>
+
+
+       <!-- Script Link  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
 </html>
