--- a/index.html
+++ b/index.html
@@ -29,15 +29,69 @@
        <div class="container-fluid" style="max-height: 250px;">
         <div class="row text-center bg-warning" >
           <div class="col-6 align-itmes-center">
-            <h1 class="mt-80">Clothing Online Shop</h1>
+            <h1 class="mt-80 max-height: 400px">Clothing Online Shop</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet consequatur, ipsa modi quam illum molestiae id architecto fugiat eos expedita!</p>
           </div>
-          <div class="col-6">
-            <img src="" alt="">
+          <div class="" alt="">
           </div>
         </div>
        </div>
-
+        <!-- Shopping Cards  -->
+        <div class="container-fluid">
+          <div class="row justify-content:around">
+            <div class="col-2">
+              <button type="button" class="btn btn-primary">Primary</button>
+            </div>
+            <div class="col-2">
+              <button type="button" class="btn btn-primary">Primary</button>
+            </div>
+            <div class="col-2">
+              <button type="button" class="btn btn-primary">Primary</button>
+            </div>
+            <div class="col-2">
+              <button type="button" class="btn btn-primary">Primary</button>
+            </div>
+            <div class="col-2">
+              <button type="button" class="btn btn-primary">Primary</button>
+            </div>
+          </div>
+        </div>
+        <div class="container-fluid">
+          <div class="row" style="display: flex; justify-content: evenly;">
+          <div class="col ml-90px" style="flex: start; padding: 0 10px;">
+            <div class="card" style="width: 18rem; margin-bottom: 20px;">
+              <img src="..." class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+          
+          <div class="col" style="flex: start; padding: 0 10px;">
+            <div class="card" style="width: 18rem; margin-bottom: 20px;">
+              <img src="..." class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+          
+          <div class="col" style="flex: start; padding: 0 10px;">
+            <div class="card" style="width: 18rem; margin-bottom: 20px;">
+              <img src="..." class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>   
 
        <!-- Script Link  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
