--- a/index.html
+++ b/index.html
@@ -91,18 +91,17 @@
 <div class="container-fluid main">
   <div class="row">
     <!-- Sidebar -->
-    <div class="col-2">
-      <div class="slide-bar">
-        <h4>Side Bar</h4>
-      </div>
+    <div class="col-2 slider ml-3">
+        <h4 class="m-3 ">Filters</h4>
+        <hr>
     </div>
     
     <!-- Cards Section -->
-    <div class="col-10">
-      <h4>Men's Clothing</h4>
-      <div class="row cards">
-        <div class="col-3">
-          <div class="card" style="width: 20rem; height: 27rem; margin-bottom: 20px;">
+    <div class="col-9 ">
+      <h4 class="mt-2">Men's Clothing</h4>
+      <div class="row cards justify-content-space-evenly">
+        <div class="col-xxl-3 col-xl-4 col-lg-4 col-md-5 justify-content-space-evenly">
+          <div class="card" style="width: 18rem; height: 25rem; margin-bottom: 20px;">
             <img src="img/pant1.webp" class="card-img-top" alt="">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -112,8 +111,8 @@
           </div>
         </div>
 
-        <div class="col-3">
-          <div class="card" style="width: 20rem; height: 27rem; margin-bottom: 20px;">
+        <div class="col-xxl-3 col-xl-4 col-lg-4 col-md-5 justify-content-space-evenly">
+          <div class="card" style="width: 18rem; height: 25rem; margin-bottom: 20px;">
             <img src="img/jacket.webp" class="card-img-top" alt="">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -123,8 +122,8 @@
           </div>
         </div>
 
-        <div class="col-3">
-          <div class="card" style="width: 20rem; height: 27rem; margin-bottom: 20px;">
+        <div class="col-xxl-3 col-xl-4 col-lg-4 col-md-5 justify-content-space-evenly">
+          <div class="card" style="width: 18rem; height: 25rem; margin-bottom: 20px;">
             <img src="img/shirt.webp" class="card-img-top" alt="">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -134,8 +133,8 @@
           </div>
         </div>
 
-        <div class="col-3">
-          <div class="card" style="width: 20rem; height: 27rem; margin-bottom: 20px;">
+        <div class="col-xxl-3 col-xl-4 col-lg-4 col-md-5 justify-content-space-evenly">
+          <div class="card" style="width: 18rem; height: 25rem; margin-bottom: 20px;">
             <img src="img/pant2.webp" class="card-img-top" alt="">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -145,8 +144,8 @@
           </div>
         </div>
 
-        <div class="col-3">
-          <div class="card" style="width: 20rem; height: 27rem; margin-bottom: 20px;">
+        <div class="col-xxl-3 col-xl-4 col-lg-4 col-md-5 justify-content-space-evenly">
+          <div class="card" style="width: 18rem; height: 25rem; margin-bottom: 20px;">
             <img src="img/shirt2.webp" class="card-img-top" alt="">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -156,8 +155,8 @@
           </div>
         </div>
 
-        <div class="col-3">
-          <div class="card" style="width: 20rem; height: 27rem; margin-bottom: 20px;">
+        <div class="col-xxl-3 col-xl-4 col-lg-4 col-md-5 justify-content-space-evenly">
+          <div class="card" style="width: 18rem; height: 25rem; margin-bottom: 20px;">
             <img src="img/pant4.webp" class="card-img-top" alt="">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -167,8 +166,8 @@
           </div>
         </div>
 
-        <div class="col-3">
-          <div class="card" style="width: 20rem; height: 27rem; margin-bottom: 20px;">
+        <div class="col-xxl-3 col-xl-4 col-lg-4 col-md-5 justify-content-space-evenly">
+          <div class="card" style="width: 18rem; height: 25rem; margin-bottom: 20px;">
             <img src="img/suit1.webp" class="card-img-top" alt="">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -178,8 +177,8 @@
           </div>
         </div>
 
-        <div class="col-3">
-          <div class="card" style="width: 20rem; height: 27rem; margin-bottom: 20px;">
+        <div class="col-xxl-3 col-xl-4 col-lg-4 col-md-5 justify-content-space-evenly">
+          <div class="card" style="width: 18rem; height: 25rem; margin-bottom: 20px;">
             <img src="img/shirt3.webp" class="card-img-top" alt="">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -207,7 +206,7 @@
       <h4>Women's Clothing</h4>
       <div class="row cards">
         <div class="col-3">
-          <div class="card" style="width: 20rem; height: 27rem; margin-bottom: 20px;">
+          <div class="card" style="width: 18rem; height: 25rem; margin-bottom: 20px;">
             <img src="img/pant1.webp" class="card-img-top" alt="">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -218,7 +217,7 @@
         </div>
 
         <div class="col-3">
-          <div class="card" style="width: 20rem; height: 27rem; margin-bottom: 20px;">
+          <div class="card" style="width: 18rem; height: 25rem; margin-bottom: 20px;">
             <img src="img/jacket.webp" class="card-img-top" alt="">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -229,7 +228,7 @@
         </div>
 
         <div class="col-3">
-          <div class="card" style="width: 20rem; height: 27rem; margin-bottom: 20px;">
+          <div class="card" style="width: 18rem; height: 25rem; margin-bottom: 20px;">
             <img src="img/shirt.webp" class="card-img-top" alt="">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -240,7 +239,7 @@
         </div>
 
         <div class="col-3">
-          <div class="card" style="width: 20rem; height: 27rem; margin-bottom: 20px;">
+          <div class="card" style="width: 18rem; height: 25rem; margin-bottom: 20px;">
             <img src="img/pant2.webp" class="card-img-top" alt="">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -251,7 +250,7 @@
         </div>
 
         <div class="col-3">
-          <div class="card" style="width: 20rem; height: 27rem; margin-bottom: 20px;">
+          <div class="card" style="width: 18rem; height: 25rem; margin-bottom: 20px;">
             <img src="img/shirt2.webp" class="card-img-top" alt="">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -262,7 +261,7 @@
         </div>
 
         <div class="col-3">
-          <div class="card" style="width: 20rem; height: 27rem; margin-bottom: 20px;">
+          <div class="card" style="width: 18rem; height: 25rem; margin-bottom: 20px;">
             <img src="img/pant4.webp" class="card-img-top" alt="">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -273,7 +272,7 @@
         </div>
 
         <div class="col-3">
-          <div class="card" style="width: 20rem; height: 27rem; margin-bottom: 20px;">
+          <div class="card" style="width: 18rem; height: 25rem; margin-bottom: 20px;">
             <img src="img/suit1.webp" class="card-img-top" alt="">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -284,7 +283,7 @@
         </div>
 
         <div class="col-3">
-          <div class="card" style="width: 20rem; height: 27rem; margin-bottom: 20px;">
+          <div class="card" style="width: 18rem; height: 25rem; margin-bottom: 20px;">
             <img src="img/shirt3.webp" class="card-img-top" alt="">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
