--- a/signup.html
+++ b/signup.html
@@ -12,7 +12,7 @@
     <nav class="navbar">
         <div class="container-fluid">
           <div class="navbar-collapse">
-            <a class="navbar-brand" href="#"><img src="img/logo.jpg" class="logo" alt="Logo"></a>
+            <a class="navbar-brand" href="#" onclick="goToHome()"><img src="img/logo.jpg" class="logo" alt="Logo"></a>
             <div class="searchBtn">
             <input class="search-input" type="search" placeholder="Search for Products, Brands and more..."
               aria-label="Search">
@@ -110,6 +110,9 @@
 <script>
   function goToLogin() {
       window.location.href = "login.html";
+  }
+  function goToHome() {
+    window.location.href = "home.html";
   }
   </script>
 </html>
